--- a/r2/r2/templates/frametoolbar.html
+++ b/r2/r2/templates/frametoolbar.html
@@ -102,7 +102,7 @@
       </a>
     %endif
 
-    <a target="_top" href="/help/toolbar">
+    <a target="_top" href="/wiki/toolbar">
       <img src="${static('help.png')}"
            width="11" height="11"
            alt="${_('help')}" title="${_('help')}" />
