--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -112,7 +112,7 @@
          %endif
 
          /&#32;
-         <a class="nonbutton" href="/help/moderation#Distinguishing">
+         <a class="nonbutton" href="/wiki/moderation#Distinguishing">
            help
          </a>
          &#32;
