--- a/r2/r2/templates/redditheader.html
+++ b/r2/r2/templates/redditheader.html
@@ -69,8 +69,8 @@
           base = g.https_endpoint if not c.cname else ""
           login_url = add_sr(base + "/login", sr_path=False)
         %>
-        ${text_with_links(_("want to join? %(login_or_register)s in seconds"),
-            login_or_register = dict(link_text=_("login or register"), path=login_url, _class="login-required"))}
+       ## ${text_with_links(_("want to join? %(login_or_register)s in seconds"),
+       ##     login_or_register = dict(link_text=_("login or register"), path=login_url, _class="login-required"))}
       </span>
       ${separator("|")}
       %endif
