--- a/r2/r2/templates/userawards.html
+++ b/r2/r2/templates/userawards.html
@@ -25,7 +25,7 @@
   <h1>${heading}</h1>
   %for award in awards:
     <div class="award-square mini">
-      <a href="/help/awards/#${award.codename}">
+      <a href="/wiki/awards/#${award.codename}">
         <img src="${award.imgurl % 70}" />
         <br/>
         <span class="award-name mini">${award.title}</span>
@@ -44,7 +44,7 @@
   %for award, winner, trophy in thing.regular_winners:
 
     <div class="award-square">
-      <a href="/help/awards/#${award.codename}">
+      <a href="/wiki/awards/#${award.codename}">
         <img src="${award.imgurl % 70}" />
         <span class="award-name">${award.title}</span>
       </a>
